feat(referencing): Provide API to reference books
