# referencing/src/main/resources/api/openapi.yml
@@ -13,6 +13,8 @@ servers:
 tags:
   - name: Authors
     description: Manage referencing of authors within the library.
+  - name: Books
+    description: Manage referencing of books within the library.
 paths:
   /v1/authors:
     get:
@@ -29,7 +31,7 @@ paths:
         '206':
           $ref: '#/components/responses/Authors'
         '400':
-          $ref: '#/components/responses/InvalidAuthorsParameters'
+          $ref: '#/components/responses/InvalidPaginationParameters'
         '500':
           $ref: '#/components/responses/GeneralError'
     post:
@@ -52,7 +54,7 @@ paths:
           $ref: '#/components/responses/ForbiddenError'
         '500':
           $ref: '#/components/responses/GeneralError'
-  /v1/authors/{id}:
+  /v1/authors/{authorId}:
     get:
       tags:
         - Authors
@@ -71,10 +73,69 @@ paths:
           $ref: '#/components/responses/UnknownAuthor'
         '500':
           $ref: '#/components/responses/GeneralError'
+  /v1/books:
+    get:
+      tags:
+        - Books
+      summary: Gets a paginated list of books based on filters.
+      description: |
+        The books list can be sorted and filtered in many different ways.
+      operationId: getBooks
+      parameters:
+        - $ref: '#/components/parameters/Page'
+        - $ref: '#/components/parameters/PageSize'
+      responses:
+        '206':
+          $ref: '#/components/responses/Books'
+        '400':
+          $ref: '#/components/responses/InvalidPaginationParameters'
+        '500':
+          $ref: '#/components/responses/GeneralError'
+    post:
+      tags:
+        - Books
+      summary: References a new book.
+      description: |
+        References a book to be able to reference editions.
+      operationId: referenceBook
+      requestBody:
+        $ref: '#/components/requestBodies/ReferenceBook'
+      responses:
+        '201':
+          $ref: '#/components/responses/ReferencedBook'
+        '400':
+          $ref: '#/components/responses/InvalidBookReferencing'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+        '409':
+          $ref: '#/components/responses/DuplicateBook'
+        '500':
+          $ref: '#/components/responses/GeneralError'
+  /v1/books/{bookId}:
+    get:
+      tags:
+        - Books
+      summary: Gets the details of a book based on its identity.
+      description: |
+        The details of a book contain all its information.
+      operationId: getBook
+      parameters:
+        - $ref: '#/components/parameters/BookId'
+      responses:
+        '200':
+          $ref: '#/components/responses/Book'
+        '400':
+          $ref: '#/components/responses/InvalidBookId'
+        '404':
+          $ref: '#/components/responses/UnknownBook'
+        '500':
+          $ref: '#/components/responses/GeneralError'
 components:
   parameters:
     AuthorId:
-      name: id
+      name: authorId
       description: Author identity.
       in: path
       required: true
@@ -82,6 +143,15 @@ components:
         type: string
         format: uuid
         example: 83b5bf5d-b8bc-4ea7-82dd-51d7bd1af725
+    BookId:
+      name: bookId
+      description: Book identity.
+      in: path
+      required: true
+      schema:
+        type: string
+        format: uuid
+        example: b6608a30-1e9b-4ae0-a89d-624c3ca85da4
     Page:
       name: page
       description: |
@@ -118,6 +188,16 @@ components:
         application/hal+json:
           schema:
             $ref: '#/components/schemas/ReferenceAuthor'
+    ReferenceBook:
+      required: true
+      description: A command to reference a book.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ReferenceBook'
+        application/hal+json:
+          schema:
+            $ref: '#/components/schemas/ReferenceBook'
   responses:
     Authors:
       description: The referenced authors.
@@ -152,7 +232,50 @@ components:
           examples:
             invalidAuthorReferencing:
               $ref: '#/components/examples/InvalidAuthorReferencing'
-    InvalidAuthorsParameters:
+    Books:
+      description: The referenced books.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Books'
+        application/hal+json:
+          schema:
+            $ref: '#/components/schemas/Books'
+    ReferencedBook:
+      description: The referenced book.
+      headers:
+        Location:
+          description: Link the referenced book.
+          schema:
+            type: string
+            example: 'https://referencing.library.adhuc.org/api/v1/books/b6608a30-1e9b-4ae0-a89d-624c3ca85da4'
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Book'
+        application/hal+json:
+          schema:
+            $ref: '#/components/schemas/Book'
+    InvalidBookReferencing:
+      description: Invalid book referencing command.
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+          examples:
+            invalidBookReferencing:
+              $ref: '#/components/examples/InvalidBookReferencing'
+    DuplicateBook:
+      description: |
+        Duplicated book. Happens when the title / author pair is similar to another existing book. Author is considered similar if it includes all the authors from the other book, or is included in the authors from the other book.
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+          examples:
+            duplicateBook:
+              $ref: '#/components/examples/DuplicateBook'
+    InvalidPaginationParameters:
       description: Invalid pagination parameters.
       content:
         application/problem+json:
@@ -190,6 +313,33 @@ components:
           examples:
             unknown:
               $ref: '#/components/examples/UnknownAuthor'
+    Book:
+      description: A referenced book.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Book'
+        application/hal+json:
+          schema:
+            $ref: '#/components/schemas/Book'
+    InvalidBookId:
+      description: Invalid book ID.
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+          examples:
+            invalidId:
+              $ref: '#/components/examples/InvalidUUIDId'
+    UnknownBook:
+      description: No book corresponds to the specified identity.
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+          examples:
+            unknown:
+              $ref: '#/components/examples/UnknownBook'
     UnauthorizedError:
       description: Unauthorized error.
       content:
@@ -375,6 +525,181 @@ components:
           $ref: '#/components/schemas/DateOfBirth'
         date_of_death:
           $ref: '#/components/schemas/DateOfDeath'
+    Books:
+      type: object
+      required:
+        - page
+        - '_links'
+      properties:
+        page:
+          $ref: '#/components/schemas/Page'
+        '_embedded':
+          type: object
+          readOnly: true
+          required:
+            - books
+          properties:
+            books:
+              description: |
+                The books collection, containing basic information for each book.
+              type: array
+              items:
+                $ref: '#/components/schemas/Book'
+        '_links':
+          type: object
+          readOnly: true
+          required:
+            - self
+          properties:
+            self:
+              description: Link to this books page.
+              type: object
+              required:
+                - href
+              properties:
+                href:
+                  type: string
+                  example: 'https://referencing.library.adhuc.org/api/v1/books?page=1&size=50'
+            template:
+              description: Link to the template of books page.
+              type: object
+              required:
+                - href
+                - templated
+              properties:
+                href:
+                  type: string
+                  example: 'https://referencing.library.adhuc.org/api/v1/books{?page,size}'
+                templated:
+                  type: boolean
+                  enum:
+                    - true
+            prev:
+              description: Link to the previous books page.
+              type: object
+              required:
+                - href
+              properties:
+                href:
+                  type: string
+                  example: 'https://referencing.library.adhuc.org/api/v1/books?page=0&size=50'
+            next:
+              description: Link to the next books page.
+              type: object
+              required:
+                - href
+              properties:
+                href:
+                  type: string
+                  example: 'https://referencing.library.adhuc.org/api/v1/books?page=3&size=50'
+            first:
+              description: Link to the first books page.
+              type: object
+              required:
+                - href
+              properties:
+                href:
+                  type: string
+                  example: 'https://referencing.library.adhuc.org/api/v1/books?page=0&size=50'
+            last:
+              description: Link to the last books page.
+              type: object
+              required:
+                - href
+              properties:
+                href:
+                  type: string
+                  example: 'https://referencing.library.adhuc.org/api/v1/books?page=8&size=50'
+    Book:
+      type: object
+      required:
+        - id
+        - authors
+        - original_language
+        - details
+        - '_links'
+      properties:
+        id:
+          $ref: '#/components/schemas/BookId'
+        authors:
+          $ref: '#/components/schemas/BookAuthors'
+        original_language:
+          $ref: '#/components/schemas/Language'
+        details:
+          $ref: '#/components/schemas/BookDetails'
+        '_links':
+          type: object
+          readOnly: true
+          required:
+            - self
+          properties:
+            self:
+              $ref: '#/components/schemas/BookLink'
+    BookId:
+      type: string
+      format: uuid
+      example: b6608a30-1e9b-4ae0-a89d-624c3ca85da4
+    BookLink:
+      type: object
+      description: Link to the book. Can be used to see the detail of the book.
+      required:
+        - href
+      properties:
+        href:
+          type: string
+          example: 'https://referencing.library.adhuc.org/api/v1/books/b6608a30-1e9b-4ae0-a89d-624c3ca85da4'
+    BookAuthors:
+      type: array
+      minItems: 1
+      items:
+        $ref: '#/components/schemas/AuthorId'
+    Language:
+      type: string
+      example: 'fr'
+    BookDetails:
+      type: array
+      description: List of details for the different languages.
+      minItems: 1
+      items:
+        $ref: '#/components/schemas/BookDetail'
+    BookDetail:
+      type: object
+      required:
+        - language
+        - title
+        - description
+      properties:
+        language:
+          $ref: '#/components/schemas/Language'
+        title:
+          type: string
+          example: 'Du contrat social'
+        description:
+          type: string
+          example: >
+            Du contrat social est un traité de philosophie politique présentant comment l’homme, passant de l’état de
+            nature à l’état de société, peut instituer un ordre social au service de l'intérêt commun. Le pacte social
+            que propose Rousseau établit que chacun doit renoncer à tous ses droits particuliers ou du plus fort pour
+            obtenir l'égalité des droits que procure la société. Cette aliénation de chaque sujet de l’État est ce pacte
+            qui offre à chacun l’égalité : « Les clauses [du pacte social] se réduisent toutes à une seule :
+            l’aliénation totale de chaque associé avec tous ses droits à toute la communauté : car premièrement, chacun
+            se donnant tout entier, la condition est égale pour tous ; et la condition étant égale pour tous, nul n’a
+            intérêt de la rendre onéreuse aux autres. » (Livre I, Chapitre 6) La légitimité du pacte social repose sur
+            le fait que l’homme n’aliène pas au sens propre (il ne l'échange pas ni ne le donne) son droit naturel mais
+            il comprend que le pacte social est au contraire la condition de l’existence de ses droits naturels.
+    ReferenceBook:
+      type: object
+      required:
+        - authors
+        - original_language
+        - details
+      properties:
+        authors:
+          $ref: '#/components/schemas/BookAuthors'
+        original_language:
+          $ref: '#/components/schemas/Language'
+        details:
+          $ref: '#/components/schemas/BookDetails'
     Page:
       type: object
       readOnly: true
@@ -483,7 +808,7 @@ components:
         detail: Invalid author referencing command
         errors:
           - detail: 'Empty string'
-            parameter: name
+            pointer: '/name'
     InvalidUUIDId:
       value:
         type: /problems/invalid-request
@@ -501,6 +826,33 @@ components:
         title: Unknown author
         detail: No author exists with id '96c7774f-dd6b-43d4-bd0e-6a7d1aad09a4'
       summary: Error when no author corresponds to the specified identity.
+    InvalidBookReferencing:
+      value:
+        type: /problems/invalid-request
+        status: 400
+        title: Request validation error
+        detail: Invalid book referencing command
+        errors:
+          - detail: 'Empty string'
+            pointer: '/details/0/title'
+    DuplicateBook:
+      value:
+        type: /problems/duplicate-book
+        status: 409
+        title: Duplicate book
+        detail: Book with title already exists
+        errors:
+          - detail: |
+              Title 'Du contrat social' already exists for language 'en'
+            pointer: '/details/0/title'
+      summary: Duplicate Book.
+    UnknownBook:
+      value:
+        type: /problems/unknown-entity
+        status: 404
+        title: Unknown book
+        detail: No book exists with id '6c8f5aad-c337-43b2-b359-12ba3990ed48'
+      summary: Error when no book corresponds to the specified identity.
     UnauthorizedError:
       value:
         type: /problems/unauthorized
